--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     font-weight: bolder;
 }
 
-a:hover {
+.header a:hover {
     background-color: rgb(110, 182, 182);
     padding: 5px;
     border-radius: 5px;
@@ -40,7 +40,7 @@ h1 {
     display: flex;
     margin: auto;
     border-radius: 10px;
-    width: 150px;
+    width: 400px;
     height: 60px;
 }
 
@@ -102,42 +102,6 @@ div p {
         top: 0px;
         width: 100%;
     }
-
-    .header nav {
-        display: absolute;
-        width: 100%;
-        height: 100%;    
-        background-color: rgb(255, 0, 0);    
-    }
-
-    .menu {
-        display: flex;
-        position: fixed;
-        flex-wrap: wrap;
-        align-items: center;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        background-color: rgba (0, 0, 0, 0.7);
-        overflow: hidden;
-    }
-
-    .menu li {
-        display: block;
-        width: 100%;
-        margin-left: 0px;
-        margin-bottom: 20px;
-
-    }
-
-    .menu li a {
-        display: block;
-        text-align: center;
-        width: 100%;
-
-    }
-
 }
 
 .grid {
