--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     background-color: darkslategrey;
 }
 
-
 .header a {
     text-decoration: none;
     color: white;
@@ -31,16 +30,8 @@ h1 {
     text-align: center;
     color: white; 
     margin: auto;
-    padding: 5px;
+    padding: 10px;
     font-weight: bolder;
-}
-
-.titulo {
-    display: flex;
-    margin: auto;
-    border-radius: 10px;
-    width: 400px;
-    height: 60px;
 }
 
 img {
@@ -140,11 +131,12 @@ section div a:hover {
     display: none;
 }
 
-@media screen and (max-width:700px) {   
+@media screen and (max-width:600px) {   
     
     .logo {
         font-size: 130%;
         margin-top: 8px;
+        margin-left: 19px;
     }
     .nav-item {
         display: none;
